--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Level 1</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Hi
+    <h1>Learning CSS</h1>
 </body>
 </html>
