learning rgb colors

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Learning CSS</h1>
+    <span>
+        Hello you!
+    </span>
+    <h2>My name is AMMAR!</h2>
 </body>
 </html>
