learned hex color system

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Learning CSS</h1>
-    <span>
-        Hello you!
-    </span>
-    <h2>My name is AMMAR!</h2>
+    <h1>This is a heading</h1>
+    <p>This is a sample paragraph</p>
+
+     <button>Click me</button>
 </body>
 </html>
