solved 3 questions from practice set1

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Level 1</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        button{color:blue;}
+    </style>
 </head>
 <body>
-    <h1>This is a heading</h1>
-    <p>This is a sample paragraph</p>
+    <!-- Practice Set 1 -->
+    <!-- Question 1 solution -->
+    <div id="box">
+        Some text inside the div.
+    </div>
 
-     <button>Click me</button>
+    <!-- Question 2 solution -->
+    <h1 class="heading">First Heading</h1>
+    <h2 class="heading">Second Heading</h2>
+    <h3 class="heading">Third Heading</h3>
+
+     <!-- Question 3 solution -->
+     <button style="color:pink;">Click Me</button>
+
 </body>
 </html>
