--- a/CSS/index.html
+++ b/CSS/index.html
@@ -6,7 +6,7 @@
     <title>CSS Level 1</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        button{color:blue;}
+        button{background-color:blue;}
     </style>
 </head>
 <body>
@@ -22,7 +22,7 @@
     <h3 class="heading">Third Heading</h3>
 
      <!-- Question 3 solution -->
-     <button style="color:pink;">Click Me</button>
+     <button style="background-color:pink;">Click Me</button>
 
 </body>
 </html>
