learned text related properties

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
 
-    <h1>Sample Text</h1>
+    <h1 id="qq">1st Heading</h1>
+    <h1 id="ww">2nd Heading</h1>
+    <h1 id="ee">3rd Heading</h1>
+    <h1 id="rr">4th Heading</h1>
   
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda in id temporibus facere at mollitia ex vel, fugiat, reiciendis ipsa autem! Incidunt repellat inventore provident aperiam excepturi impedit architecto sint? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error assumenda iusto nihil, aspernatur nisi fugiat id dolorem voluptates asperiores quidem! Tenetur est consequuntur numquam doloremque minima pariatur non quo repudiandae.
     Ipsam est alias, recusandae temporibus earum incidunt totam corporis animi blanditiis labore minus unde quis saepe adipisci nulla ut modi ab! Sed magni distinctio quam adipisci at sequi nemo sunt.
