--- a/CSS/index.html
+++ b/CSS/index.html
@@ -5,28 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Level 1</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        button{background-color:blue;}
-    </style>
 </head>
 <body>
+    <p id="qq">paragrapgh 1</p>
+    <p id="ww">paragrapgh 2</p>
+    <p id="ee">paragrapgh 3</p>
 
-    <h1 id="qq">1st Heading</h1>
-    <h1 id="ww">2nd Heading</h1>
-    <h1 id="ee">3rd Heading</h1>
-    <h1 id="rr">4th Heading</h1>
+
   
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda in id temporibus facere at mollitia ex vel, fugiat, reiciendis ipsa autem! Incidunt repellat inventore provident aperiam excepturi impedit architecto sint? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error assumenda iusto nihil, aspernatur nisi fugiat id dolorem voluptates asperiores quidem! Tenetur est consequuntur numquam doloremque minima pariatur non quo repudiandae.
-    Ipsam est alias, recusandae temporibus earum incidunt totam corporis animi blanditiis labore minus unde quis saepe adipisci nulla ut modi ab! Sed magni distinctio quam adipisci at sequi nemo sunt.
-    Omnis, ducimus! Id nisi adipisci eum, quod error quis explicabo, natus similique vitae aspernatur harum, reiciendis dolor. Quasi velit distinctio est architecto debitis consectetur quod explicabo et, deleniti molestias sit!
-    Dolorum magni tempore inventore dicta. Aspernatur esse vel aut impedit a quos architecto sed accusantium placeat voluptatem autem corrupti nemo molestiae earum cum, minus, iusto fuga nihil facilis maxime totam.
-    Veniam consequuntur perferendis unde labore quaerat est, numquam repellendus sapiente sit iusto voluptates quam dolore dignissimos porro fugit rerum eaque facere, dolores dicta. Perspiciatis pariatur quibusdam sit quasi, veniam id!
-    Necessitatibus accusamus dolor ex ut sit ullam illum, molestiae, consectetur delectus tempore harum? Recusandae a saepe, non et voluptatibus id quod sequi reiciendis dolorum repudiandae ducimus voluptate minus facere sint?
-    Earum necessitatibus est aliquid quo, illo minus dolorum voluptatem aliquam eligendi doloribus, doloremque et tempore adipisci voluptates molestiae animi expedita qui laborum? Libero, ea incidunt? Id beatae consectetur autem dolores?
-    Qui nulla in nisi quos rem, est exercitationem magnam. Quisquam repellat aut dolor veniam sapiente magni possimus in qui numquam nulla? Corrupti repellendus officia itaque minima doloribus necessitatibus est. Assumenda!
-    Exercitationem, natus perferendis. Alias magni natus dolore hic dicta? Nihil rerum maxime reiciendis ut neque quaerat placeat sit quae alias exercitationem asperiores facilis, esse suscipit error culpa nulla nam eveniet?
-    Aperiam voluptate sit omnis in impedit obcaecati exercitationem repellat, culpa neque facilis provident commodi veritatis dolore? Aspernatur, impedit ullam enim veritatis illum aliquid nulla, aperiam obcaecati labore, voluptatum necessitatibus consequatur. </p>
-
-    <a href="https://www.google.com" target="_main">Google</a>
 </body>
 </html>
