learned line-height and text-transform css properties

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="qq">paragrapgh 1</p>
-    <p id="ww">paragrapgh 2</p>
-    <p id="ee">paragrapgh 3</p>
-
-
-  
+    <p id="ww">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta dolor animi iusto quod non tempore aut expedita in architecto maiores nulla, provident, dolorem repudiandae cum ex nostrum deserunt necessitatibus corporis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, eius officia. Consequatur autem est soluta sequi accusamus magni quos, eveniet dignissimos velit ullam nobis dolorem eaque vel, obcaecati mollitia assumenda!
+    Id blanditiis sapiente nihil laboriosam numquam, veniam temporibus quibusdam mollitia ipsa rem, perferendis ducimus, ullam beatae? Molestias quo dolor debitis temporibus, ducimus magni quod alias consequuntur? Dolorem ut officia nisi!</p>
+   
 </body>
 </html>
