Solves practice set 2 questions

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="ww">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta dolor animi iusto quod non tempore aut expedita in architecto maiores nulla, provident, dolorem repudiandae cum ex nostrum deserunt necessitatibus corporis? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas, eius officia. Consequatur autem est soluta sequi accusamus magni quos, eveniet dignissimos velit ullam nobis dolorem eaque vel, obcaecati mollitia assumenda!
-    Id blanditiis sapiente nihil laboriosam numquam, veniam temporibus quibusdam mollitia ipsa rem, perferendis ducimus, ullam beatae? Molestias quo dolor debitis temporibus, ducimus magni quod alias consequuntur? Dolorem ut officia nisi!</p>
+    <!-- solution 1 -->
+   <h1>Hello,world!</h1>
+
+   <!-- solution 2 -->
+   
+   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quod illo distinctio inventore impedit rerum. Ab est, accusamus ipsa, distinctio nisi corrupti fugit, explicabo enim numquam corporis consectetur accusantium quaerat.
+
+   <hr>
+
+   <!-- solution 3 -->
+
+   <div id="outer">
+     outer
+
+    <div id="inner">
+      inner
+    </div>
+
+    </div>
    
 </body>
 </html>
