Started Learning CSS level 2 from apna college

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,29 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Level 1</title>
+    <title>CSS Level 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- solution 1 -->
-   <h1>Hello,world!</h1>
-
-   <!-- solution 2 -->
-   
-   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque quod illo distinctio inventore impedit rerum. Ab est, accusamus ipsa, distinctio nisi corrupti fugit, explicabo enim numquam corporis consectetur accusantium quaerat.
-
-   <hr>
-
-   <!-- solution 3 -->
-
-   <div id="outer">
-     outer
-
-    <div id="inner">
-      inner
-    </div>
-
-    </div>
-   
+  Started learning CSS level 2
 </body>
 </html>
