--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Started learning CSS level 2
+  <h1>Hello,Everyone!</h1>
+
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident doloremque distinctio veritatis accusantium nam sapiente explicabo itaque, amet vero cupiditate, laboriosam rerum modi molestias porro excepturi quibusdam veniam, sequi eius.</p>
+
+  <button>  Click Here </button> <br> 
+
+  <div>
+    This is some random text inside the div.
+  </div>
+
 </body>
 </html>
