--- a/CSS/index.html
+++ b/CSS/index.html
@@ -11,7 +11,7 @@
 
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident doloremque distinctio veritatis accusantium nam sapiente explicabo itaque, amet vero cupiditate, laboriosam rerum modi molestias porro excepturi quibusdam veniam, sequi eius.</p>
 
-  <button>  Click Here </button> <br> 
+  <button>  Click Here </button> <br> <br>
 
   <div>
     This is some random text inside the div.
