learned padding & margin

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,15 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello,Everyone!</h1>
 
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident doloremque distinctio veritatis accusantium nam sapiente explicabo itaque, amet vero cupiditate, laboriosam rerum modi molestias porro excepturi quibusdam veniam, sequi eius.</p>
+ <div>div 1</div> <br>
+ <div>div 2</div> <br>
+ <div>div 3</div> <br>
 
-  <button>  Click Here </button> <br> <br>
-
-  <div>
-    This is some random text inside the div.
-  </div>
 
 </body>
 </html>
