--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,10 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+  <!-- Solution 1 -->
+<div id="qq">
 
- <div>div 1</div> <br>
- <div>div 2</div> <br>
- <div>div 3</div> <br>
+</div> <br>
+
+<!-- Solution 2 -->
+<div id="ww">
+<pre><p id="rr"> amazon.in </p>                            Account                              My Cart                            Contact Us                              <form id="ee"> <input type="text" placeholder="Search Amazon.in" name="Main search bar"> <button id="tt">Search</button>  </form>    </pre>
+</div>
+
+
 
 
 </body>
