added guideline pic for practice set 3

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,17 +8,7 @@
 </head>
 <body>
  
-  <!-- Solution 1 -->
-<div id="qq">
-
-</div> <br>
-
-<!-- Solution 2 -->
-<div id="ww">
-<pre><p id="rr"> amazon.in </p>                            Account                              My Cart                            Contact Us                              <form id="ee"> <input type="text" placeholder="Search Amazon.in" name="Main search bar"> <button id="tt">Search</button>  </form>    </pre>
-</div>
-
-
+  <!-- Amazon Navigation bar -->
 
 
 </body>
