--- a/CSS/index.html
+++ b/CSS/index.html
@@ -7,18 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- 
-  <!-- Amazon Navigation bar -->
 
-  <div id="navbar">
-   <a id="logo" href="#">amazon.in</a>
-   <a href="#">Account</a>
-   <a href="#">My Cart</a>
-   <a href="#">Contact Us</a>
-   <input placeholder="Search Amazon.in">
-   <button>Search</button>
+  <h1>Learning Display properties</h1>
 
-  </div>
+  <div id="box1">Div box 1</div>
+  <div id="box2">Div box 2</div>
+  <div id="box3">Div box 3</div>
+
 
 
 </body>
