--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,13 +8,47 @@
 </head>
 <body>
 
+  <header> 
+    
+    <div id="navbar">
+    <a id="logo" href="#">amazon.in</a>
+    <a href="#">Account</a>
+    <a href="#">My Cart</a>
+    <a href="#">Contact Us</a>
+    <input placeholder="Search Amazon.in">
+    <button>Search</button>
+ 
+   </div>
+  
+  </header>
+
+  <main>
+
+    <div id="div1" >
+
+    </div>
+
+    <div id="div2">
+
+    </div>
+
+    <div id="div3">
 
 
-  <div id="box1">Div box 1</div>
-  <div id="box2">Div box 2</div>
-  <div id="box3">Div box 3</div>
+    </div>
 
 
+
+
+  </main>
+
+ 
+
+
+
+
+
+  <footer> <p id="footertext"> Thanks for using my webiste </p>  </footer>
 
 </body>
 </html>
