--- a/CSS/index.html
+++ b/CSS/index.html
@@ -22,7 +22,7 @@
   
   </header>
 
-  <main>
+  <main id="contentarea">
 
     <div id="div1" >
 
@@ -42,13 +42,8 @@
 
   </main>
 
- 
-
-
-
-
-
-  <footer> <p id="footertext"> Thanks for using my webiste </p>  </footer>
+  <footer> <pre id="footertext">  Conditions of Use     Privacy Notice   Your Ads      Privacy Choices
+    © 1996-2023, Amazon.com, Inc. or its affiliates </pre>  </footer>
 
 </body>
 </html>
