--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,47 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Level 2</title>
+    <title>CSS Level 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <header> 
-    
-    <div id="navbar">
-    <a id="logo" href="#">amazon.in</a>
-    <a href="#">Account</a>
-    <a href="#">My Cart</a>
-    <a href="#">Contact Us</a>
-    <input placeholder="Search Amazon.in">
-    <button>Search</button>
- 
-   </div>
-  
-  </header>
+  <div id="parent">
 
-  <main id="contentarea">
-
-    <div id="div1" >
-
-    </div>
-
-    <div id="div2">
-
-    </div>
-
-    <div id="div3">
+    <div id="child">
 
 
     </div>
 
 
+  </div>
 
 
-  </main>
-
-  <footer> <pre id="footertext">  Conditions of Use     Privacy Notice   Your Ads      Privacy Choices
-    © 1996-2023, Amazon.com, Inc. or its affiliates </pre>  </footer>
 
 </body>
 </html>
