--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,16 +8,9 @@
 </head>
 <body>
 
-  <div id="parent">
-
-    <div id="child">
-
-
-    </div>
-
-
-  </div>
-
+<div>
+  Hello,world!
+</div>
 
 
 </body>
