--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 
-<div>
-  Hello,world!
-</div>
-
+    <h1>Position Playground:</h1>
+    <div id="box1">box1</div>
+    <div id="box2">box2 </div>
+    <div id="box3">box3</div>
+    <div id="box4">box4</div>
 
 </body>
 </html>
