--- a/CSS/index.html
+++ b/CSS/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Level 3</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS level 3</title>
+  <link rel="stylesheet" href="style.css"  >  
 </head>
 <body>
-  <div id="box4">box4</div>
-
-  <h1>Position Playground:</h1>
-
-    <div id="box1">box1</div>
-    <div id="box2">box2 </div>
-    <div id="box3">box3</div>
-
+  
+  <div id="box1">box 1</div>
+  <div id="box2">box 2</div>
 </body>
 </html>
