going to revise whatever I studied

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,47 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS level 3</title>
+  <title>REVISION</title>
   <link rel="stylesheet" href="style.css"  >  
 </head>
 <body>
-  
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa hic accusamus nam ea voluptates ducimus magni maiores sint rerum necessitatibus quo earum id tempore, beatae mollitia debitis consectetur fugiat est.
-   Ad rem voluptates iste quia doloremque inventore saepe et. Sunt veritatis sint possimus? Molestiae assumenda distinctio delectus expedita hic quo, harum explicabo deserunt, omnis sit autem dolorem quis pariatur doloribus!
-   Quos, praesentium iure? Aliquid provident optio, nulla ea assumenda recusandae magnam repellat, eligendi quisquam vel rerum. Dolorem illo dicta alias atque eligendi amet ex quia, dolorum iste a consequuntur fugiat!
-   Quisquam, sapiente numquam dicta, quaerat iste consectetur soluta natus adipisci molestias possimus ad voluptatem quam quibusdam ex enim eaque facilis ducimus in optio perferendis culpa error ipsam? Quis, vero quos!
-   Dignissimos suscipit aliquam consequatur adipisci sequi repudian Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nobis nulla deleniti, autem voluptatibus, repellat omnis saepe itaque ipsa cumque architecto pariatur laudantium, quis temporibus eligendi neque fuga assumenda. Reprehenderit.
-   Soluta, saepe corporis ea veritatis cumque odio aut recusandae iusto molestias at, optio quibusdam. Dolore aspernatur sunt natus iste, accusamus beatae consequatur porro omnis eveniet magni maiores asperiores, quaerat ratione.
-   Distinctio veniam laudantium facilis, quasi voluptatum unde minima dolorem sint impedit culpa pariatur placeat optio illum nulla atque, aliquam rem totam consequuntur illo, ipsam aut architecto doloribus voluptas. Architecto, voluptate.
-   Rerum fuga quis ab consequuntur assumenda saepe a reprehenderit rem nisi aperiam, aliquid aut at veritatis culpa maiores natus distinctio facere? Quod nam accusantium unde consequuntur voluptatibus aspernatur veritatis. Iste!
-   Commodi excepturi deserunt est tempore, magni eos eum reprehenderit ad error cupiditate provident ipsa adipisci vel consectetur, id nobis dolore quis nihil ullam minus dolores. Dolore, autem maxime? Fuga, at.
-   Adipisci quia iusto fugit odio consequuntur minus nobis quo exercitationem, cupiditate velit doloribus sequi, odit sapiente, dicta quisquam repudiandae blanditiis necessitatibus quas alias sed magni minima veniam laudantium reprehenderit? Ex.
-   Rerum, nam debitis distinctio corrupti vero id, dolorem enim sequi accusamus quo laboriosam laudantium magni est exercitationem quidem quisquam voluptatibus voluptates provident quam sit? Ex illo voluptatum saepe alias enim.
-   Illum id obcaecati numquam sequi aspernatur fugiat ea libero omnis? Quam sed repellendus laborum numquam nulla, error dolores reiciendis quo natus ut distinctio, quia nam pariatur fugit. Officiis, tempora expedita.
-   Atque laborum totam, incidunt optio eos ipsam excepturi quod a eaque obcaecati saepe doloremque ratione at aspernatur, necessitatibus vitae eius? Rerum ea nemo perferendis, magnam nesciunt cupiditate voluptas explicabo vitae?
-   Ea temporibus culpa, praesentium itaque quibusdam soluta excepturi dignissimos vel sunt consectetur. Quo illum ipsa totam cumque quaerat ipsum beatae culpa ducimus aliquid voluptates rerum facere numquam, sint blanditiis nam!dae, quia inventore nam minus recusandae necessitatibus, aliquid officiis est rem qui quaerat illum, harum molestias! Earum nostrum doloribus sunt possimus sapiente amet laudantium.</p>
 
-  <div>  </div>
 
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident saepe, quia illo aspernatur atque consequuntur placeat ducimus in porro totam necessitatibus harum impedit quos repellendus asperiores. Quibusdam voluptatibus incidunt eligendi?
-  Quos reiciendis fuga sunt deserunt voluptatem pariatur, iusto incidunt, odio animi explicabo culpa? Cupiditate nulla magni ipsum aperiam est quidem velit aut nihil, nisi deserunt unde. Aspernatur iste fuga nostrum.
-  Aspernatur odit ea dolorum tempore voluptate laboriosam, fugit obcaecati exercitationem, nisi asperiores dolores consequuntur sint, consequatur molestiae dicta alias et. Qui incidunt maiores inventore laudantium adipisci, ab sed dignissimos molestias.
-  Modi magnam, impedit perspiciatis excepturi minima, ex temporibus consequatur asperiores repellendus sint molestiae? Aspernatur quidem error aut eum, eius atque quo inventore perspiciatis Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore illo esse corrupti ut dicta, delectus, voluptatibus reprehenderit dolorem tenetur placeat cumque. Excepturi ipsa, iusto magni assumenda illo deserunt earum ipsam!
-  Vitae porro perspiciatis perferendis, ad quibusdam veniam omnis tempore suscipit adipisci, aperiam quis! Laboriosam iste consequatur excepturi quos voluptates, aspernatur harum repudiandae. Omnis voluptatum possimus ipsam? Quia consequatur excepturi voluptas.
-  Ipsam minus maxime ex blanditiis dolorem nihil consequatur, culpa quae inventore ad repellendus, eligendi dolorum accusantium harum accusamus facilis explicabo non animi quam fugiat rerum quibusdam, quia nam veniam. Accusantium.
-  Voluptate, aliquid officia totam magnam odio voluptatibus dolorem ratione sint ducimus soluta est nisi tempore cumque? Ullam expedita accusamus libero, perferendis repudiandae voluptatem aliquid, nesciunt dolor error, quisquam illo ratione?
-  Sapiente, omnis! Suscipit quas dolorem ipsum officiis quaerat cupiditate nesciunt inventore consequatur aliquam, dolores similique, saepe minus rem molestias natus non ab neque vel. Assumenda in commodi tempore accusantium ullam!
-  Unde temporibus magnam quibusdam. Voluptate est ipsum quasi vitae saepe dolore aliquid minus deserunt eaque impedit veritatis nobis totam pariatur, aperiam, ut, animi ab accusantium! Sit aut dolorum ex vero.
-  Nisi commodi laudantium voluptatibus! Ipsam reiciendis porro enim incidunt necessitatibus doloribus quibusdam omnis tenetur nesciunt sit, dignissimos quo quia provident assumenda aperiam voluptates facilis voluptatibus. Deserunt dolore assumenda sit quod.
-  Porro reprehenderit explicabo laboriosam, assumenda numquam eaque expedita aperiam? Ducimus quisquam at ullam quod accusantium culpa obcaecati, consequatur nesciunt, sequi, architecto consectetur laboriosam ea asperiores soluta ipsa cupiditate magnam numquam!
-  Pariatur, aut voluptate fugit sit, nisi placeat eos iure, excepturi dolor magni laborum aperiam nulla explicabo ut est veniam numquam minus. Fugit illo aspernatur pariatur ex explicabo officia odio labore.
-  Eius, at. Suscipit tempora nl Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa eligendi vel quaerat, totam, impedit similique ipsa, laborum dolorem velit aliquid expedita ut eius? Consequuntur assumenda dolores ab ipsa excepturi. Omnis.
-  Autem beatae totam possimus? Minima modi ipsa dolorem pariatur molestiae doloremque eos beatae. Expedita, voluptates! Dignissimos sequi eveniet a quo voluptatem? Numquam fugit eius harum nesciunt eligendi error a? Debitis?
-  Laborum animi dolor fugiat culpa, eveniet perferendis eos quidem, illo accusamus pariatur, quia ipsa eum? A labore eveniet perspiciatis assumenda odit laboriosam repellendus. Dolores iste sint minus consectetur fugit aliquid.
-  Ipsa illum esse tempora eaque, quia ratione voluptatibus porro cupiditate necessitatibus. Similique voluptatibus in nesciunt ipsam ea veniam rem officia quos assumenda vel natus eos, corporis quisquam perspiciatis quod voluptate!
-  Assumenda illum alias esse hic molestias, dolores earum dicta eius nesciunt voluptatum in eveniet odit tempora nemo dolorum vel delectus porro, ullam fuga rerum nobis modi nihil debitis natus. Voluptatem.
-  Dicta, impedit illum reprehenderit nostrum aspernatur dolores, provident quam tempora quasi commodi at! Perspiciatis porro ipsam ipsum, officia aspernatur officiis, esse nemo dignissimos nostrum, ullam harum provident doloremque ducimus nulla.
-  Consectetur perferendis rem maiores, possimus assumenda placeat expedita architecto? Voluptatum quasi odio hic quis aut, quos nisi delectus suscipit magnam eum, pariatur explicabo quia error qui excepturi saepe voluptate ut.  obis consequuntur quod repudiandae modi distinctio molestiae facilis illum corrupti doloribus, ducimus fugiat architecto ad eveniet illo commodi hic cum. Consequuntur sint enim ipsa distinctio itaque!quae, velit unde magnam, fugit doloremque libero!
-  Deleniti, eaque cumque illo beatae consequuntur nemo quidem neque ipsum sapiente vitae similique. Iure minima iusto culpa cumque possimus? At id similique soluta. Facilis illo totam doloribus fuga nostrum sequi?</p>
+
+
 </body>
 </html>
