make traffic light using html css

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -4,9 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>REVISION</title>
-  <link rel="stylesheet" href="style.css"  >  
+  <link rel="stylesheet" href="style.css">  
 </head>
 <body>
+
+  <div id="traffic_light">
+ 
+    <div id="red"></div>
+    <hr>
+    <div id="yellow"></div>
+    <hr>
+    <div id="green"></div>
+
+  </div>
 
 
 
