--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>REVISION</title>
+  <title>CSS LEVEL-4</title>
   <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 
-  <div id="traffic_light">
- 
-    <div id="red"></div>
-    <hr>
-    <div id="yellow"></div>
-    <hr>
-    <div id="green"></div>
+  <h1>FlexBox Playground</h1>
+
+  <div id="container">
+
+    <div id="box1">1</div>
+    <div id="box2">2</div>
+    <div id="box3">3</div>
+    <div id="box4">4</div>
+    <div id="box5">5</div>
 
   </div>
 
