Solved Practice Set 6

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,24 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS LEVEL-4</title>
+  <title>Practice set 6</title>
   <link rel="stylesheet" href="style.css">  
 </head>
 <body>
 
-  <h1>FlexBox Playground</h1>
+  <!-- Solution 1 -->
 
-  <div id="container">
+  <div id="navbar">
 
-    <div id="box1">1</div>
-    <div id="box2">2</div>
-    <div id="box3">3</div>
-    <div id="box4">4</div>
-    <div id="box5">5</div>
+   <a id="Logo" href="#">amazon.in</a>
+   <a id="Account" href="#">Account</a>
+   <a id="Cart" href="#">My Cart</a>
+   <a id="Contact" href="#">Contact Us</a>
+   <input id="Searchspace" placeholder="Search Amazon.in">
+   <button >Search</button>
 
+  </div> <br> <br>  <br> <br>
+
+  <!-- Solution 2 -->
+
+  <div id="outer">
+    <div id="inner">
+    </div>
   </div>
 
-
+  <!-- Solution 3 -->
+  <!-- Align items has higher priority -->
 
 
 </body>
