Removed all mistakes from practice set 6

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -10,16 +10,16 @@
 
   <!-- Solution 1 -->
 
-  <div id="navbar">
+  <ol class="navbar">
 
-   <a id="Logo" href="#">amazon.in</a>
-   <a id="Account" href="#">Account</a>
-   <a id="Cart" href="#">My Cart</a>
-   <a id="Contact" href="#">Contact Us</a>
-   <input id="Searchspace" placeholder="Search Amazon.in">
-   <button >Search</button>
+    <li id="item1"> <a id="Logo" href="#">amazon.in</a> </li>
+    <li id="item2"> <a id="Account" href="#">Account</a> </li>
+    <li id="item3"> <a id="Cart" href="#">My Cart</a> </li>
+    <li id="item4"> <a id="Contact" href="#">Contact Us</a> </li>
+    <!-- <li id="item5"> </li><input id="Searchspace" placeholder="Search Amazon.in">  </li>
+    <li id="item6"> </li><button >Search</button> </li> -->
 
-  </div> <br> <br>  <br> <br>
+  </ol> <br> <br>  <br> <br>
 
   <!-- Solution 2 -->
 
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Solution 3 -->
-  <!-- Align items has higher priority -->
+  <!-- Align self has higher priority -->
 
 
 </body>
