Modified practice set 6 to add serach bar and search button

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -16,8 +16,8 @@
     <li id="item2"> <a id="Account" href="#">Account</a> </li>
     <li id="item3"> <a id="Cart" href="#">My Cart</a> </li>
     <li id="item4"> <a id="Contact" href="#">Contact Us</a> </li>
-    <!-- <li id="item5"> </li><input id="Searchspace" placeholder="Search Amazon.in">  </li>
-    <li id="item6"> </li><button >Search</button> </li> -->
+    <li id="item5"> </li><input id="Searchspace" placeholder="Search Amazon.in">  </li>
+    <li id="item6"> </li><button >Search</button> </li>
 
   </ol> <br> <br>  <br> <br>
 
