--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,29 +8,7 @@
 </head>
 <body>
 
-  <!-- Solution 1 -->
-
-  <ol class="navbar">
-
-    <li id="item1"> <a id="Logo" href="#">amazon.in</a> </li>
-    <li id="item2"> <a id="Account" href="#">Account</a> </li>
-    <li id="item3"> <a id="Cart" href="#">My Cart</a> </li>
-    <li id="item4"> <a id="Contact" href="#">Contact Us</a> </li>
-    <li id="item5"> </li><input id="Searchspace" placeholder="Search Amazon.in">  </li>
-    <li id="item6"> </li><button >Search</button> </li>
-
-  </ol> <br> <br>  <br> <br>
-
-  <!-- Solution 2 -->
-
-  <div id="outer">
-    <div id="inner">
-    </div>
-  </div>
-
-  <!-- Solution 3 -->
-  <!-- Align self has higher priority -->
-
+  <div></div>
 
 </body>
 </html>
